inclusão dos links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header class="header">
             <div class="header-itens">
                 <h1 class="header-itens_title">
-                    <a href="index.html">
+                    <a href="https://www.penseavanti.com.br">
                         <img src="./assets/logos/avanti.png" alt="Logo da Avanti">
                     </a>
                 </h1>
@@ -184,12 +184,12 @@
             <div class="container-footer_links">
                 <div class="footer-links">
                     <div class="footer-links_socials">
-                        <a href="#"><img class="links-socials-title" src="./assets/logos/avanti.png" alt=""></a>
+                        <a href="https://www.penseavanti.com.br"><img class="links-socials-title" src="./assets/logos/avanti.png" alt=""></a>
                         <div class="links-socials-logos">
-                            <a href="www.instagram.com"><img src="./assets/icons/social/instagram.svg" alt="Logo do Instagram"></a>
-                            <a href="www.facebook.com"><img src="./assets/icons/social/facebook.svg" alt="Logo do Facebook"></a>
-                            <a href="www.youtube.com"><img src="./assets/icons/social/youtube.svg" alt="Logo do Youtube"></a>
-                            <a href="www.tiktok.com"><img src="./assets/icons/social/tiktok.svg" alt="Logo do TikTok"></a>
+                            <a href="https://www.instagram.com"><img src="./assets/icons/social/instagram.svg" alt="Logo do Instagram"></a>
+                            <a href="https://www.facebook.com"><img src="./assets/icons/social/facebook.svg" alt="Logo do Facebook"></a>
+                            <a href="https://www.youtube.com"><img src="./assets/icons/social/youtube.svg" alt="Logo do Youtube"></a>
+                            <a href="https://www.tiktok.com"><img src="./assets/icons/social/tiktok.svg" alt="Logo do TikTok"></a>
                         </div>
                     </div>
                     <ul>
@@ -217,13 +217,13 @@
                     </ul>
                 </div>
                 <div class="footer-links_logos">
-                    <a href="#"><img src="./assets/icons/payment/amex.svg" alt="Logo da American Express"></a>
-                    <a href="#"><img src="./assets/icons/payment/mastercard.svg" alt="Logo da MasterCard"></a>
-                    <a href="#"><img src="./assets/icons/payment/visa.svg" alt="Logo da Visa"></a>
-                    <a href="#"><img src="./assets/icons/payment/hipercard.svg" alt="Logo da Hipercard"></a>
-                    <a href="#"><img src="./assets/icons/payment/cielo.svg" alt="Logo da Cielo"></a>
-                    <a href="#"><img src="./assets/icons/payment/diners.svg" alt="Logo da Diners"></a>
-                    <a href="#"><img src="./assets/icons/payment/paypal.svg" alt="Logo da Paypal"></a>
+                    <a href="https://www.americanexpress.com"><img src="./assets/icons/payment/amex.svg" alt="Logo da American Express"></a>
+                    <a href="https://www.mastercard.com.br"><img src="./assets/icons/payment/mastercard.svg" alt="Logo da MasterCard"></a>
+                    <a href="https://www.visa.com.br"><img src="./assets/icons/payment/visa.svg" alt="Logo da Visa"></a>
+                    <a href="https://www.hipercard.com.br"><img src="./assets/icons/payment/hipercard.svg" alt="Logo da Hipercard"></a>
+                    <a href="https://www.cielo.com.br"><img src="./assets/icons/payment/cielo.svg" alt="Logo da Cielo"></a>
+                    <a href="https://www.dinersclub.com"><img src="./assets/icons/payment/diners.svg" alt="Logo da Diners"></a>
+                    <a href="https://www.paypal.com.br"><img src="./assets/icons/payment/paypal.svg" alt="Logo da Paypal"></a>
                     <a href="#"><img src="./assets/icons/payment/pix.svg" alt="Logo do Pix"></a>
                     <a href="#"><img src="./assets/icons/payment/boleto.svg" alt="Logo de Boleto"></a>
                 </div>
@@ -241,7 +241,7 @@
                     <a href="#"><img src="./assets/icons/bottom/encrypt.svg" alt="Logo da Let's Encrypt"></a>
                     <a href="#"><img src="./assets/icons/bottom/vtexcertified.svg" alt="Logo da VTex Certified"></a>
                     <span>|</span>
-                    <a href=""#><img src="./assets/icons/bottom/avanti.svg" alt="Logo da Avanti"></a>
+                    <a href="https://www.penseavanti.com.br"><img src="./assets/icons/bottom/avanti.svg" alt="Logo da Avanti"></a>
                     <a href="#"><img src="./assets/icons/bottom/vtex.svg" alt="Logo da VTex"></a>
                 </div>
             </div>
