inclusão dos links da avanti para redes sociais

--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
                     <div class="footer-links_socials">
                         <a href="https://www.penseavanti.com.br"><img class="links-socials-title" src="./assets/logos/avanti.png" alt=""></a>
                         <div class="links-socials-logos">
-                            <a href="https://www.instagram.com"><img src="./assets/icons/social/instagram.svg" alt="Logo do Instagram"></a>
-                            <a href="https://www.facebook.com"><img src="./assets/icons/social/facebook.svg" alt="Logo do Facebook"></a>
-                            <a href="https://www.youtube.com"><img src="./assets/icons/social/youtube.svg" alt="Logo do Youtube"></a>
+                            <a href="https://www.instagram.com/penseavanti/"><img src="./assets/icons/social/instagram.svg" alt="Logo do Instagram"></a>
+                            <a href="https://www.facebook.com/penseavanti/"><img src="./assets/icons/social/facebook.svg" alt="Logo do Facebook"></a>
+                            <a href="https://www.youtube.com/penseavanti"><img src="./assets/icons/social/youtube.svg" alt="Logo do Youtube"></a>
                             <a href="https://www.tiktok.com"><img src="./assets/icons/social/tiktok.svg" alt="Logo do TikTok"></a>
                         </div>
                     </div>
