conversão das imagens para webp

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Este é um projeto desenvolvido para participação no processo seletivo do Programa de Estágio Innovation Class da empresa Avanti.">
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/style.css">
         <link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -74,7 +75,7 @@
             </section>
             <section class="container-article">
                 <article class="article-info">
-                    <img src="./assets/images/article-banner01.png" alt="Imagem Decorativa de uma Caneca Azul Marinho com o logo da Avanti em fundo cinza.">
+                    <img src="./assets/images/article-banner01.webp" alt="Imagem Decorativa de uma Caneca Azul Marinho com o logo da Avanti em fundo cinza.">
                     <div class="article-text">
                         <h3>LOREM IPSUM</h3>
                         <p>
@@ -123,12 +124,12 @@
                             </p>
                         </div>
                     </div>
-                    <img class="article-single_img" src="./assets/images/article-banner02.png" alt="Imagem Decorativa de uma Caneca Azul Marinho com o logo da Avanti">
+                    <img class="article-single_img" src="./assets/images/article-banner02.webp" alt="Imagem Decorativa de uma Caneca Azul Marinho com o logo da Avanti">
                 </article>
             </section>
             <section class="container-article">
                 <article class="article-info">
-                    <img src="./assets/images/article-banner01.png" alt="Imagem Decorativa de uma Caneca Azul Marinho com o logo da Avanti em fundo cinza.">
+                    <img src="./assets/images/article-banner01.webp" alt="Imagem Decorativa de uma Caneca Azul Marinho com o logo da Avanti em fundo cinza.">
                     <div class="article-text">
                         <h3>Lorem Ipsum</h3>
                         <p>
